--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,8 +11,7 @@
 		<link rel="stylesheet" href="{{ asset('assets/css/bootstrap_1.css') }}">
 		<link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400&display=swap" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css2?family=Karla:wght@300&display=swap" rel="stylesheet">
-		<link
-		rel="stylesheet" href="/style.css">
+		<link rel="stylesheet" href="/style.css">
 	
 		{# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
 		{% block stylesheets %}
