--- a/templates/partials/_home_img1.html.twig
+++ b/templates/partials/_home_img1.html.twig
@@ -1,3 +1,3 @@
 <div class="text-center">
-<img src="/assets/images/meal1.jpg" alt="bg" style="min-width: 480px; width: 550px; height: 640px;" class="img-fluid" />
+<img src="/assets/images/meal1.jpg"class="img-fluid home_img_block" />
 </div>
