--- a/templates/partials/_home_img2.html.twig
+++ b/templates/partials/_home_img2.html.twig
@@ -1,3 +1,3 @@
 <div>
-<img src="/assets/images/meal2.jpg" alt="bg" style="width: 585px; height: 640px;" class="img-fluid" />
+<img src="/assets/images/meal2.jpg" alt="bg" class="img-fluid home_img_block" />
 </div>
