--- a/templates/recipe/show.html.twig
+++ b/templates/recipe/show.html.twig
@@ -16,13 +16,13 @@
 {% if recipe.isPublic is same as false %}
 		<h1 class="mt-4 mb-4 text-capitalize text-light">{{ recipe.name }}</h1>
 
-		<div class="recipe__image easyadmin-lightbox">
+		<div class="recipe__image easyadmin-lightbox mb-4">
 			<img style="max-width: 650px;" src="{{ vich_uploader_asset(recipe, 'imageFile') }}">
 		</div>
 
-		<h6s>La moyenne de cette recette est de
+		<h6 class="text-light  mb-4">La moyenne de cette recette est de
 			{{ recipe.average|number_format(2,'.', '.') }}
-			/ 5</h6s>
+			/ 5</h6>
 <div style="background-color: #87dbed; padding: 10px;" class="rounded">
 		<h5 class="mt-3 text-light">Description:</h5>
 		<p class="fs-4">{{ recipe.description|raw }}</p>
@@ -50,7 +50,7 @@
 		{% for ingredient in recipe.ingredients %}
 			<span class="badge bg-primary mb-4 fs-6">{{ ingredient.name }}</span>
 		{% endfor %}
-<div style="background-color: #87dbed; padding: 10px;" class="rounded">
+<div style="background-color: #87dbed; padding: 10px;" class="rounded mb-4">
 		<h5 class="mt-3 text-light">Étapes :</h5>
 		{{ recipe.steps|raw }}
 </div>
@@ -63,17 +63,21 @@
 		{% for diets in recipe.diets %}
 			<span class="badge bg-primary mb-4 fs-6">{{ diets.name }}</span>
 		{% endfor %}
+
 {% if app.user %}
-		<div class="fs-5">
+		<div class="fs-5"> 
 			{% if formMark is defined %}
 				{{ form_start(formMark) }}
+
 				{{ form_label(formMark.mark) }}
 				{{ form_widget(formMark.mark) }}
 				{{ form_row(formMark.submit) }}
+
 				{{ form_end(formMark) }}
 			{% endif %}
 			{% endif %}
 		</div>
+
 		<div class="mt-4">
 			<h2 class="text-2xl mb-8 text-light">Commentaire(s)</h2>
 			<div class="comments">
@@ -89,6 +93,7 @@
 						</div>
 					</div>
 				{% endif %}
+				
 				{% for comment in recipe.comments %}
 					{% if comment.isApproved %}
 						<div class="comment flex justify-start mb-4">
