--- a/templates/recipe/show_public.html.twig
+++ b/templates/recipe/show_public.html.twig
@@ -5,27 +5,30 @@
 {% endblock %}
 
 {% block body %}
-<div style="height: 50px; z-index: -3;">{% include "partials/_show_bg.html.twig" %}</div>
+	<div style="height: 50px; z-index: -3;">{% include "partials/_show_bg.html.twig" %}
+	</div>
+
 	<div class="container">
 		{% for message in app.flashes('success') %}
 			<div class="alert alert-success">
 				{{ message }}
 			</div>
 		{% endfor %}
-	
-		<h1 class="mt-4">{{ recipe.name }}</h1>
 
-		<div class="recipe__image">
+		<h1 class="mt-4 mb-4">{{ recipe.name }}</h1>
+
+		<div class="recipe__image mb-4">
 			<img style="max-width: 650px;" src="{{ vich_uploader_asset(recipe, 'imageFile') }}">
 		</div>
 
-		<h5 class="text-light">La moyenne de cette recette est de
+		<h5 class="text-light mb-4">La moyenne de cette recette est de
 			{{ recipe.average|number_format(2,'.', '.') }}
 			/ 5</h5>
-<div style="background-color: #87dbed; padding: 10px;" class="rounded">
-		<h5 class="mt-3 text-light">Description:</h5>
-		<p class="lead text-dark">{{ recipe.description|raw }}</p>
-</div>
+		<div style="background-color: #87dbed; padding: 10px 20px;" class="rounded">
+			<h5 class="mt-3 text-light show_block_titles">Description:</h5>
+			<p class="show_block_text mb-4" style="padding: 5px 15px;">{{ recipe.description|raw }}</p>
+		</div>
+		
 		<h5 class="mt-3 text-light">Temps de préparation (en minutes):
 			<span class="badge bg-primary mt-1">{{ recipe.preparationTime }}</span>
 		</h5>
@@ -47,44 +50,42 @@
 		<h5 class="mt-3 text-light">Ingrédients:
 		</h5>
 		{% for ingredient in recipe.ingredients %}
-			<span class="badge bg-primary mb-4">{{ ingredient.name }}</span>
+			<span class="badge bg-primary mb-4 fs-6">{{ ingredient.name }}</span>
 		{% endfor %}
-<div style="background-color:  #87dbed; padding: 10px;" class="rounded">
-		<h5 class="mt-3 text-light">Étapes: </h5>
-		
-		<p class="lead text-dark">{{ recipe.steps|raw }}</p>
-</div>
-		<h5 class="mt-3 text-light">Allergènes :</h5>
-			{% for allergen in recipe.allergens %}
-				<span class="badge bg-primary">{{ allergen.name }}</span>
-			
+		<div style="background-color:  #87dbed; padding: 10px;" class="rounded">
+			<h5 class="mt-3 text-light show_block_titles">Étapes: </h5>
+
+			<p class="show_block_text">{{ recipe.steps|raw }}</p>
+		</div>
+		<h5 class="mt-4 text-light">Allergènes :</h5>
+		{% for allergen in recipe.allergens %}
+			<span class="badge bg-primary fs-6">{{ allergen.name }}</span>
+
 		{% endfor %}
 
-		<h5 class="mt-3 text-light">Régime :</h5>
+		<h5 class="mt-4 text-light">Régime :</h5>
 		{% for diets in recipe.diets %}
 			<span class="badge bg-primary mt-1">{{ diets.name }}</span>
 		{% endfor %}
 
 		{% if app.user %}
-			
-		
-		<div>
-		
-			{% if formMark is defined %}
-				{{ form_start(formMark) }}
+			<div class="fs-5"> 
+				{% if formMark is defined %}
+					{{ form_start(formMark) }}
 
-				{{ form_label(formMark.mark) }}
-				{{ form_widget(formMark.mark) }}
-				<p>Pour noter la recette, veuillez-vous connecter !</p>
-				{{ form_row(formMark.submit) }}
-				{{ form_end(formMark) }}
-			{% endif %}
-			{% endif %}
+					{{ form_label(formMark.mark) }}
+					{{ form_widget(formMark.mark) }}
+					<p class="text-light">Pour noter la recette, veuillez-vous connecter !</p>
+					{{ form_row(formMark.submit) }}
+
+					{{ form_end(formMark) }}
+				{% endif %}
+			
 		</div>
-		<div class="mt-5">
+{% endif %}
+		<div class="mt-4">
 			<h2 class="text-2xl mb-8 text-light">Commentaire(s)</h2>
 			<div class="comments">
-			
 				{% if app.user %}
 					<div class="comments__new">
 						<div class="w-full-width">
@@ -96,36 +97,35 @@
 						</div>
 					</div>
 				{% endif %}
+
+<div class=" border p-2 rounded mb-4">
 				{% for comment in recipe.comments %}
 					{% if comment.isApproved %}
 						<div class="comment flex justify-start mb-4">
-							<div>
-								<div class="block p-6 mx-4">
-									<div class="md-ml-6">
-										<p>{{ comment.author }}</p>
-										<p class="text-light fs-5">
-											{{ comment.content|raw }}
-										</p>
-										<hr class="mx-4">
-									</div>
+							<div class="block p-6 mx-4">
+								<div class="md-ml-6">
+									<p class="text-light fst-italic">{{ comment.author }}</p>
+									<p class="text-light fs-5">
+										{{ comment.content|raw }}
+									</p>
+									<hr class="mx-4">
 								</div>
 							</div>
 						</div>
 					{% endif %}
 				{% endfor %}
-			
-
+</div>
 				{% if is_granted('ROLE_ADMIN') %}
-					<button class="btn btn-primary fs-5 fw-bold mb-5"><a href="{{ path('recipe.recipes') }}" class="text-light">Collection de recettes</a></button>
+					<button class="btn btn-primary fs-5 fw-bold mb-5">
+						<a href="{{ path('recipe.recipes') }}" class="text-light">Collection de recettes</a>
+					</button>
 				{% else %}
-						<button class="btn btn-primary fs-5 fw-bold mb-5"><a href="{{ path('recipe.index_public') }}" class="text-light">Vers la liste de recettes</a></button>
+					<button class="btn btn-primary fs-5 fw-bold mb-5">
+						<a href="{{ path('recipe.index_public') }}" class="text-light">Vers la liste de recettes</a>
+					</button>
 				{% endif %}
-			</div>
+		</div>
 		</div>
 	</div>
-</div></div>
-	<br>
-		<br>
-		<br>
-		<br>
-		<br>{% endblock %}
+
+</div></div>{% endblock %}
