--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -30,7 +30,8 @@
 		{% endblock %}
 	
 		{% block body %}{% endblock %}
-		
+		 <div class="text-center">
+<button class="btn btn-primary" type="button"><a class="fs-4" href="#up">Ver le haut</a></div>
 		{% include "partials/_footer.html.twig" %}
 	</body>
 </html>
