--- a/templates/partials/_nav.html.twig
+++ b/templates/partials/_nav.html.twig
@@ -7,7 +7,7 @@
 		<div class="collapse navbar-collapse" id="navbarColor01">
 			<ul class="navbar-nav me-auto text-center">
 				<li class="nav-item">
-					<a class="nav-link nav-link-name active fw-bold" href="/">Accueil
+					<a class="nav-link nav-link-name active fw-bold" href="/" id="up">Accueil
 						<span class="visually-hidden">(current)</span>
 					</a>
 				</li>
