--- a/templates/pages/contact/index.html.twig
+++ b/templates/pages/contact/index.html.twig
@@ -11,6 +11,7 @@
     {% endfor %}
 <h1>Contact</h1>
 {{ form(form) }}
+<div class="text-center mb-4"><button class="btn btn-primary" type="button"><a class="mt-4 fs-4 text-light" href="/">Accueil</a></div>
 </div>
 
 {% endblock %}
