--- a/templates/recipe/index.html.twig
+++ b/templates/recipe/index.html.twig
@@ -30,8 +30,7 @@
 				</div>
 				{% endfor %}
 				{% endif %}
-			
-			
 		</div>
+		<div class="text-center mb-4"><button class="btn btn-primary" type="button"><a class="mt-4 fs-4 text-light" href="/">Accueil</a></div>
 	</div>
 {% endblock %}
