--- a/templates/recipe/index_public.html.twig
+++ b/templates/recipe/index_public.html.twig
@@ -28,5 +28,6 @@
 				{% endif %}
 			{% endfor %}
 		</div>
+		<div class="text-center mb-4"><button class="btn btn-primary" type="button"><a class="mt-4 fs-4 text-light" href="/">Accueil</a></div>
 	</div>
 {% endblock %}
