--- a/templates/recipe/show_public.html.twig
+++ b/templates/recipe/show_public.html.twig
@@ -128,4 +128,5 @@
 		</div>
 	</div>
 
-</div></div>{% endblock %}
+</div>
+<div class="text-center mb-4"><button class="btn btn-primary" type="button"><a class="mt-4 fs-4 text-light" href="/">Accueil</a></div></div>{% endblock %}
