--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -31,7 +31,7 @@
 	
 		{% block body %}{% endblock %}
 		 <div class="text-center">
-<button class="btn btn-primary" type="button"><a class="fs-4" href="#up">Ver le haut</a></div>
+<button class="btn btn-primary" type="button"><a class="fs-4 text-light" href="#up">Ver le haut</a></div>
 		{% include "partials/_footer.html.twig" %}
 	</body>
 </html>
