--- a/templates/pages/security/login.html.twig
+++ b/templates/pages/security/login.html.twig
@@ -30,6 +30,7 @@
 		<button type="submit" class="btn btn-primary mt-4">
 			<a class="nav-link" href="/inscription">Inscription</a>
 		</button>
+		<div class="text-center mt-4 mb-4"><button class="btn btn-primary" type="button"><a class="mt-4 fs-4 text-light" href="/">Accueil</a></div>
 	</div>
 {% endblock %}
 
