--- a/templates/pages/security/registration.html.twig
+++ b/templates/pages/security/registration.html.twig
@@ -7,6 +7,7 @@
     <h1 class="mt-4">Formulaire d'inscription</h1>
 
     {{ form(form) }}
+    <div class="text-center mt-4 mb-4"><button class="btn btn-primary" type="button"><a class="mt-4 fs-4 text-light" href="/">Accueil</a></div>
    
 </div>
 {% endblock %}
